--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
            </div>
         </div>
            <div id="about me"><h2>ABOUT ME</h2></div>
-           <img src="image.jpg" height="250px" width="300px" id="three">
+           <img src="images/image.jpg" height="250px" width="300px" id="three">
            <h3>Education</h3>
            <p>I did my Kenya Certificate of Secondary Education in the year 2019 and I am at Moringa School  studying Programming</p>
            <p>I decided to do programming because I have passion in Software development</p>
